SERVER-16428 Partition the WT session cache