src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.h
@@ -115,8 +115,6 @@ namespace mongo {
         void dropAllQueued();
         bool haveDropsQueued() const;
 
-        int currentEpoch() const { return _epoch; }
-
         void syncSizeInfo(bool sync) const;
 
     private:
@@ -140,8 +138,6 @@ namespace mongo {
 
         std::set<std::string> _identToDrop;
         mutable boost::mutex _identToDropMutex;
-
-        int _epoch; // this is how we keep track of if a session is too old
 
         scoped_ptr<WiredTigerSizeStorer> _sizeStorer;
         string _sizeStorerUri;
